--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                             </div>
                             <div class="header__info">
                                 <h2>Наши продукты</h2>
-                                <div>
-                                    <button>Для салата</button>
+                                <div class="head__btn">
+                                    <button class="actived">Для салата</button>
                                     <button>Итальянское</button>
                                     <button>Для мяса</button>
                                     <button>Восточное</button>
@@ -106,16 +106,95 @@
                                 <h1>Масло “Для салата”</h1>
                                 <p>Название говорит само за себя. Это идеальная заправка, которая даже скучной и привычной капусте придаст неповторимый вкус и аромат. 
                                 </p>
+                                <div class="see">
+                                  <button><a href="">ПОДРОБНЕЕ</a></button>
+                                  <button><a href="">В КОРЗИНУ</a></button>
+                                </div>
                             </div>
 
 
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        
+                        <div class="header__content">
+                          <div class="header__imgs">
+                              <div></div>
+                              <img src="img/italianskoe.png" alt="" class="dlia_salata">
+                              <img src="img/image_16.png" alt="" class="potato">
+                          </div>
+                          <div class="header__info">
+                              <h2>Наши продукты</h2>
+                              <div class="head__btn">
+                                  <button >Для салата</button>
+                                  <button class="actived">Итальянское</button>
+                                  <button>Для мяса</button>
+                                  <button>Восточное</button>
+                              </div>
+                              <h1>Масло “Итальянское”</h1>
+                              <p>Идеальное решение для легкого и быстрого маринада мяса, можно добавить капельку масла и после приготовления.  
+                              </p>
+                              <div class="see">
+                                <button><a href="">ПОДРОБНЕЕ</a></button>
+                                <button><a href="">В КОРЗИНУ</a></button>
+                              </div>
+                          </div>
+
+
+                      </div>
                       </div>
                       <div class="carousel-item">
-                        
+                        <div class="header__content">
+                          <div class="header__imgs">
+                              <div></div>
+                              <img src="img/dlia_myasa.png" alt="" class="dlia_salata">
+                              <img src="img/image_14.png" alt="" class="potato">
+                          </div>
+                          <div class="header__info">
+                              <h2>Наши продукты</h2>
+                              <div class="head__btn">
+                                  <button >Для салата</button>
+                                  <button>Итальянское</button>
+                                  <button class="actived">Для мяса</button>
+                                  <button>Восточное</button>
+                              </div>
+                              <h1>Масло “Для мяса”</h1>
+                              <p>Идеальное решение для легкого и быстрого маринада мяса, можно добавить капельку масла и после приготовления.  
+                              </p>
+                              <div class="see">
+                                <button><a href="">ПОДРОБНЕЕ</a></button>
+                                <button><a href="">В КОРЗИНУ</a></button>
+                              </div>
+                          </div>
+
+
+                      </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="header__content">
+                          <div class="header__imgs">
+                              <div></div>
+                              <img src="img/vostochnoe.png" alt="" class="dlia_salata">
+                              <img src="img/image_15.png" alt="" class="potato">
+                          </div>
+                          <div class="header__info">
+                              <h2>Наши продукты</h2>
+                              <div class="head__btn">
+                                  <button >Для салата</button>
+                                  <button>Итальянское</button>
+                                  <button>Для мяса</button>
+                                  <button class="actived">Восточное</button>
+                              </div>
+                              <h1>Масло “Восточное”</h1>
+                              <p>Идеальное решение для легкого и быстрого маринада мяса, можно добавить капельку масла и после приготовления.  
+                              </p>
+                              <div class="see">
+                                <button><a href="">ПОДРОБНЕЕ</a></button>
+                                <button><a href="">В КОРЗИНУ</a></button>
+                              </div>
+                          </div>
+
+
+                      </div>
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -144,10 +223,6 @@
         </header>
 
 
-
-
-
-
         <!-- 
         ######################################################
         #################### Header END ######################
@@ -155,6 +230,89 @@
         -->
 
 
+
+        <!-- 
+        ######################################################
+        ################# Section Oil Start ##################
+        ######################################################
+        -->
+        <section class="sec__oil">
+          <div class="container-xl">
+            <div class="row  oil">
+              <h2>Масло</h2>
+              <div class="col-3 card">
+                <img src="img/dlia_salata-1.png" alt="image">
+                <div class="circle"></div>
+                <h5>Масло “Для салата”</h5>
+                <p>Название говорит само за себя. Это идеальная заправка, которая даже скучной и привычной капусте придаст неповторимый вкус и аромат. </p>
+                <p >Состав: оливковое масло холодного отжима, розмарин, тимьян, базилик, орегано, чеснок, смесь из 5 перцев.
+                </p>
+                <div class="card__oil">
+                  <button><a href="">ПОДРОБНЕЕ</a></button>
+                  <button><a href="">В КОРЗИНУ</a></button>
+                </div>
+              </div>
+              <div class="col-3 card">
+                <img src="img/italianskoe-2.png" alt="image">
+                <div class="circle"></div>
+                <h5>Масло “Для салата”</h5>
+                <p>Название говорит само за себя. Это идеальная заправка, которая даже скучной и привычной капусте придаст неповторимый вкус и аромат. </p>
+                <p >Состав: оливковое масло холодного отжима, розмарин, тимьян, базилик, орегано, чеснок, смесь из 5 перцев.
+                </p>
+                <div class="card__oil">
+                  <button><a href="">ПОДРОБНЕЕ</a></button>
+                  <button><a href="">В КОРЗИНУ</a></button>
+                </div>
+              </div>
+              <div class="col-3 card">
+                <img src="img/dlia_myasa-3.png" alt="image">
+                <div class="circle"></div>
+                <h5>Масло “Для салата”</h5>
+                <p>Название говорит само за себя. Это идеальная заправка, которая даже скучной и привычной капусте придаст неповторимый вкус и аромат. </p>
+                <p >Состав: оливковое масло холодного отжима, розмарин, тимьян, базилик, орегано, чеснок, смесь из 5 перцев.
+                </p>
+                <div class="card__oil">
+                  <button><a href="">ПОДРОБНЕЕ</a></button>
+                  <button><a href="">В КОРЗИНУ</a></button>
+                </div>
+              </div>
+              <div class="col-3 card">
+                <img src="img/vostochnoe-4.png" alt="image">
+                <div class="circle"></div>
+                <h5>Масло “Для салата”</h5>
+                <p>Название говорит само за себя. Это идеальная заправка, которая даже скучной и привычной капусте придаст неповторимый вкус и аромат. </p>
+                <p >Состав: оливковое масло холодного отжима, розмарин, тимьян, базилик, орегано, чеснок, смесь из 5 перцев.
+                </p>
+                <div class="card__oil">
+                  <button><a href="">ПОДРОБНЕЕ</a></button>
+                  <button><a href="">В КОРЗИНУ</a></button>
+                </div>
+              </div>
+
+
+
+
+            </div>
+
+
+
+
+          </div>
+
+
+
+
+
+        </section>
+
+
+
+
+        <!-- 
+        ######################################################
+        ################## Section Oil END ###################
+        ######################################################
+        -->
 
 
     </main>
