--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="circle"><img src="img/logo.png" alt="image"></div>
                     
                         <ul>
-                            <li><a href="#sec__oil">Масло</a></li>
-                            <li><a href="#about">О нас</a></li>
+                            <li><a href="sec__oil">Масло</a></li>
+                            <li><a href="about">О нас</a></li>
                             <li><a href="">Отзывы</a></li>
                             <li><a href="">Оплата и доставка</a></li>
                             <li><a href="">Контакты</a></li>
